Add macOS ANGLE rendering path