@@ -5,6 +5,9 @@
     <property name="bin" location="bin"/>
     <property name="resources" location="resources"/>
     <property name="jarfile" location= "JHelioviewer.jar"/>
+    <property name="native.macos.dir" location="native/macos"/>
+    <property name="natives.macos.dir" location="lib/natives-macos"/>
+    <property name="metal.host.lib" location="${natives.macos.dir}/libjhvmetalhost.dylib"/>
 
     <fileset id="libfiles" dir="./">
         <include name="lib/**/*.jar"/>
@@ -18,6 +21,31 @@
     <target name="clean">
         <delete dir="${bin}"/>
         <delete file="${jarfile}"/>
+        <delete file="${metal.host.lib}"/>
+    </target>
+
+    <target name="build-metal-host">
+        <mkdir dir="${natives.macos.dir}"/>
+        <exec executable="xcrun" failonerror="true">
+            <arg value="clang"/>
+            <arg value="-fobjc-arc"/>
+            <arg value="-dynamiclib"/>
+            <arg value="-arch"/>
+            <arg value="arm64"/>
+            <arg value="-arch"/>
+            <arg value="x86_64"/>
+            <arg value="-framework"/>
+            <arg value="Foundation"/>
+            <arg value="-framework"/>
+            <arg value="AppKit"/>
+            <arg value="-framework"/>
+            <arg value="QuartzCore"/>
+            <arg value="-framework"/>
+            <arg value="Metal"/>
+            <arg value="-o"/>
+            <arg value="${metal.host.lib}"/>
+            <arg value="${native.macos.dir}/jhv_metal_host.m"/>
+        </exec>
     </target>
 
     <target name="compile">
@@ -78,6 +106,7 @@
     </target>
 
     <target name="jar" depends="compile">
+        <delete file="${jarfile}"/>
         <copy file="version.properties" tofile="${bin}/version.properties"/>
         <replace file="${bin}/version.properties" token="@@VERSION" value="${version}"/>
         <replace file="${bin}/version.properties" token="@@REVISION" value="${revision}"/>
@@ -92,6 +121,7 @@
             <manifest>
                 <attribute name="Automatic-Module-Name" value="org.helioviewer.jhv"/>
                 <attribute name="Add-Exports" value="java.desktop/sun.awt java.desktop/sun.swing"/>
+                <attribute name="Add-Opens" value="java.desktop/java.awt java.desktop/sun.lwawt java.desktop/sun.lwawt.macosx"/>
                 <attribute name="Main-Class" value="org.helioviewer.jhv.JHelioviewer"/>
                 <attribute name="Class-Path" value="${manifest_cp}"/>
                 <attribute name="version" value="${version}"/>
@@ -102,6 +132,12 @@
 
     <target name="run" depends="jar">
         <java jar="${jarfile}" fork="true"/>
+    </target>
+
+    <target name="run-metal-host" depends="build-metal-host,jar">
+        <java jar="${jarfile}" fork="true">
+            <jvmarg value="--enable-native-access=ALL-UNNAMED"/>
+        </java>
     </target>
 
     <target name="all" depends="jar"/>
